crates/rpkl-runtime/tests/snapshots/snapshot_tests__set_sort_durations.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "r1": [
    "100ms",
    "11s",
    "3d"
  ]
}
