crates/rpkl-runtime/tests/snapshots/snapshot_tests__set_sort_with.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "r1": [],
  "r2": [
    1,
    2,
    3,
    4,
    5
  ]
}
