crates/rpkl-runtime/tests/snapshots/snapshot_tests__set_take_drop.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "s": [
    1,
    2,
    3
  ],
  "t0": [],
  "t2": [
    1,
    2
  ],
  "t4": [
    1,
    2,
    3
  ],
  "d0": [
    1,
    2,
    3
  ],
  "d2": [
    3
  ],
  "d4": []
}
