crates/rpkl-runtime/tests/snapshots/snapshot_tests__set_take_last_while_drop_last_while.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "s": [
    1,
    2,
    3
  ],
  "tlw1": [
    1,
    2,
    3
  ],
  "tlw2": [],
  "tlw3": [
    2,
    3
  ],
  "dlw1": [],
  "dlw2": [
    1,
    2,
    3
  ],
  "dlw3": [
    1
  ]
}
