crates/rpkl-runtime/tests/snapshots/snapshot_tests__set_to_list_to_set.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "r1": [
    3,
    1,
    2
  ],
  "r2": []
}
