crates/rpkl-runtime/tests/snapshots/snapshot_tests__set_union_intersect_difference.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "s1": [
    1,
    2,
    3
  ],
  "s2": [
    2,
    3,
    4
  ],
  "r1": [
    1,
    2,
    3,
    4
  ],
  "r2": [
    2,
    3
  ],
  "r3": [
    1
  ]
}
